# pretix-sortir

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CHANGELOG_1.0.2.md  CHANGELOG_1.0.3.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: AUTO_COLLECTSTATIC.md
pretix_sortir/: __init__.py  api.py  api_client.py  apps.py  fields.py  forms.py  logging_filters.py  models.py  navigation.py  signals.py  urls.py  views.py
pretix_sortir/management/commands/: sortir_cleanup.py
pretix_sortir/migrations/: 0001_initial.py  0002_add_api_url_fields.py  0003_rename_pretix_sort_event_i_5b5c5f_idx_pretix_sort_event_i_9db569_idx_and_more.py  0004_set_api_enabled_default_true.py  0005_set_event_enabled_default_true.py  0006_add_api_url_fields.py  0007_encrypt_api_token.py  0008_add_unique_card_constraint.py  0009_add_audit_log.py  0010_nullable_user_agent.py  0011_add_retention_fields.py  0012_add_session_id.py  0013_simplify_api_url.py  0014_auto_enable_api.py  __init__.py
pretix_sortir/static/pretix_sortir/: sortir.css  sortir.js
pretix_sortir/templates/pretix_sortir/: checkout_sortir.html  event_settings.html  item_config.html  items_list.html  organizer_settings.html  usage_list.html
