[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-sortir"
version = "1.0.1"
description = "Pretix plugin for Sortir! reduced fare integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pretix Sortir Plugin Contributors"}
]
keywords = ["pretix", "plugin", "sortir", "apras", "tickets", "reduced-fare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/valentin-gosselin/pretix-sortir"
Documentation = "https://github.com/valentin-gosselin/pretix-sortir/blob/main/README.md"
Repository = "https://github.com/valentin-gosselin/pretix-sortir"
Issues = "https://github.com/valentin-gosselin/pretix-sortir/issues"

[tool.setuptools]
packages = ["pretix_sortir"]
include-package-data = true

[tool.setuptools.package-data]
pretix_sortir = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["migrations"]
known_django = ["django", "pretix"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]